style.css
:root {
    --grass-colour: #006000;
}

* {
    box-sizing: border-box;
    user-select: none;

    &:disabled {
        cursor: not-allowed;
    }

    .hidden {
        display: none !important;
    }
}

body {
    background-color: #112233;
    font-family: 'Roboto', Arial, sans-serif;
    font-weight: bold;
    font-size: 16px;
    color: #ffffff;
    margin: 0;
    padding: 0;
    display: flex;
    align-items: center;
    justify-content: center;
    height: 100svh;
}

.outline {
    border-radius: 10px;
    outline: 2px solid #ffffff60;
}

#whatButton {
    --size: 60px;

    font-size: 40px;
    width: var(--size);
    height: var(--size);
    display: flex;
    align-items: center;
    justify-content: center;
    border-radius: 50%;
    background-color: #ffffff20;
    color: #ffffff;
    border: 5px solid #ffffff;
    cursor: help;

    &:hover {
        background-color: #ffffff40;
    }
}

#mainContainer:not(:has(#whatButton:hover)) {
    & .whatText {
        display: none;
    }
}

.whatText {
    position: absolute;
    z-index: 99;
    font-size: 60px;
    background-color: #000000a0;
    display: flex;
    align-items: center;
    justify-content: center;
    border-radius: 10px;
    text-align: center;

    translate: calc(var(--padding) * -1) calc(var(--padding) * -1);
}
/* ... */

